--- a/Unknown/Unknown/MainTableViewCell.xib
+++ b/Unknown/Unknown/MainTableViewCell.xib
@@ -11,23 +11,113 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="194" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="Unknown" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="287" height="194"/>
+            <rect key="frame" x="0.0" y="0.0" width="417" height="194"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="287" height="194"/>
+                <rect key="frame" x="0.0" y="0.0" width="417" height="194"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FiF-60-AeJ">
-                        <rect key="frame" x="16" y="0.0" width="255" height="177"/>
+                        <rect key="frame" x="16" y="0.0" width="382" height="177"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIS-5J-ICw">
-                                <rect key="frame" x="16" y="16" width="41.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIS-5J-ICw">
+                                <rect key="frame" x="16" y="16" width="316" height="16.5"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="저기요">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="이">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="코드">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="오류">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="좀">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="찾아주세요">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="c">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".SFNS-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="언어인데">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="왜">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="NotoSerifMyanmar-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="안될까요">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y5d-Rv-gak">
-                                <rect key="frame" x="16" y="49" width="223" height="107"/>
+                                <rect key="frame" x="16" y="44.5" width="350" height="107"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="107" id="gxl-OW-4hh"/>
@@ -44,6 +134,7 @@
                             <constraint firstAttribute="trailing" secondItem="y5d-Rv-gak" secondAttribute="trailing" constant="16" id="6hS-AB-Y6O"/>
                             <constraint firstItem="aIS-5J-ICw" firstAttribute="top" secondItem="FiF-60-AeJ" secondAttribute="top" constant="16" id="Hf0-4E-jLn"/>
                             <constraint firstAttribute="height" constant="177" id="fzo-YN-PgP"/>
+                            <constraint firstAttribute="width" constant="382" id="k5Y-H5-phe"/>
                             <constraint firstItem="y5d-Rv-gak" firstAttribute="leading" secondItem="FiF-60-AeJ" secondAttribute="leading" constant="16" id="maF-p9-iTh"/>
                             <constraint firstItem="y5d-Rv-gak" firstAttribute="top" secondItem="aIS-5J-ICw" secondAttribute="bottom" constant="12" id="thE-bz-jo8"/>
                             <constraint firstItem="aIS-5J-ICw" firstAttribute="leading" secondItem="FiF-60-AeJ" secondAttribute="leading" constant="16" id="tmF-5X-9Yw"/>
@@ -56,6 +147,7 @@
                     </view>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="FiF-60-AeJ" secondAttribute="trailing" constant="16" id="Dr6-R9-uVV"/>
                     <constraint firstItem="FiF-60-AeJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="I47-my-sev"/>
                     <constraint firstAttribute="trailing" secondItem="FiF-60-AeJ" secondAttribute="trailing" constant="16" id="hJc-ay-kxT"/>
                     <constraint firstItem="FiF-60-AeJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hnd-qT-zaZ"/>
@@ -66,7 +158,7 @@
                 <outlet property="codeView" destination="y5d-Rv-gak" id="ZND-Hq-q0N"/>
                 <outlet property="postView" destination="FiF-60-AeJ" id="hI8-M6-lSe"/>
             </connections>
-            <point key="canvasLocation" x="163.04347826086959" y="143.30357142857142"/>
+            <point key="canvasLocation" x="257.24637681159425" y="143.30357142857142"/>
         </tableViewCell>
     </objects>
     <resources>
