--- a/Unknown/Unknown/Base.lproj/Main.storyboard
+++ b/Unknown/Unknown/Base.lproj/Main.storyboard
@@ -508,21 +508,28 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sV8-Cp-C70">
-                                            <rect key="frame" x="48" y="29" width="93" height="15"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JKh-Cb-lCZ">
+                                            <rect key="frame" x="48" y="32" width="6" height="15"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="10"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vn3-LJ-RPt">
+                                            <rect key="frame" x="54" y="32" width="18.5" height="15"/>
+                                            <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="10"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="NHe-yg-UUL" firstAttribute="top" secondItem="mwQ-fP-KsI" secondAttribute="topMargin" constant="3" id="35e-XQ-TE1"/>
-                                        <constraint firstItem="sV8-Cp-C70" firstAttribute="centerX" secondItem="iYn-em-SOL" secondAttribute="centerX" id="BfN-ug-qHq"/>
+                                        <constraint firstItem="JKh-Cb-lCZ" firstAttribute="leading" secondItem="mwQ-fP-KsI" secondAttribute="leading" constant="48" id="FHS-VY-0VZ"/>
                                         <constraint firstItem="NHe-yg-UUL" firstAttribute="baseline" secondItem="iYn-em-SOL" secondAttribute="baseline" id="G5B-Qb-Edd"/>
+                                        <constraint firstItem="JKh-Cb-lCZ" firstAttribute="top" secondItem="iYn-em-SOL" secondAttribute="bottom" id="NSt-Mw-zoD"/>
                                         <constraint firstItem="NHe-yg-UUL" firstAttribute="leading" secondItem="iYn-em-SOL" secondAttribute="trailing" constant="4" id="RTM-EV-7UG"/>
                                         <constraint firstItem="iYn-em-SOL" firstAttribute="leading" secondItem="mwQ-fP-KsI" secondAttribute="leading" constant="48" id="Sf0-2B-6Jo"/>
-                                        <constraint firstItem="sV8-Cp-C70" firstAttribute="leading" secondItem="mwQ-fP-KsI" secondAttribute="leading" constant="48" id="hRE-XY-ulI"/>
-                                        <constraint firstItem="sV8-Cp-C70" firstAttribute="top" secondItem="mwQ-fP-KsI" secondAttribute="topMargin" constant="18" id="lgL-Iy-uCA"/>
+                                        <constraint firstItem="vn3-LJ-RPt" firstAttribute="top" secondItem="iYn-em-SOL" secondAttribute="bottom" id="h51-Te-k9H"/>
+                                        <constraint firstItem="vn3-LJ-RPt" firstAttribute="leading" secondItem="JKh-Cb-lCZ" secondAttribute="trailing" id="kqv-Eo-erP"/>
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -535,7 +542,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xEN-If-rLU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-429" y="931"/>
+            <point key="canvasLocation" x="-430.43478260869568" y="930.80357142857133"/>
         </scene>
         <!--Write View Controller-->
         <scene sceneID="k7T-ZA-nvA">
@@ -563,13 +570,13 @@
                                 <rect key="frame" x="0.0" y="152" width="414" height="744"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dN4-lo-iRW">
-                                        <rect key="frame" x="16" y="20" width="36" height="24"/>
-                                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
+                                        <rect key="frame" x="16" y="20" width="32.5" height="24"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4IP-fw-4vq">
-                                        <rect key="frame" x="64" y="20" width="60" height="24"/>
+                                        <rect key="frame" x="60.5" y="20" width="63.5" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ba-09-Jgt">
                                                 <rect key="frame" x="11" y="3" width="9" height="18"/>
