--- a/Unknown/Unknown/Base.lproj/Main.storyboard
+++ b/Unknown/Unknown/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cy4-DM-f2M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X3f-EE-TI8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -50,14 +50,14 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="by semicolon" translatesAutoresizingMaskIntoConstraints="NO" id="Ftq-bo-QIV">
-                                <rect key="frame" x="144.5" y="824" width="125" height="18"/>
+                                <rect key="frame" x="144.5" y="868" width="125" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="125" id="5Ex-fo-sMK"/>
                                     <constraint firstAttribute="height" constant="18" id="jOt-aK-wpG"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nmN-Nj-xRT">
-                                <rect key="frame" x="16" y="640" width="382" height="48"/>
+                                <rect key="frame" x="16" y="684" width="382" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="UUN-E5-uin"/>
                                 </constraints>
@@ -81,9 +81,12 @@
                                         <integer key="value" value="25"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="navPush:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M0b-Es-MRc"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAG-6r-rpI">
-                                <rect key="frame" x="16" y="708" width="382" height="48"/>
+                                <rect key="frame" x="16" y="752" width="382" height="48"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="CF3-Zk-qsm"/>
@@ -107,6 +110,9 @@
                                         <real key="value" value="0.5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="naviPush:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CgE-hy-8Ri"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -128,6 +134,7 @@
                             <constraint firstItem="nmN-Nj-xRT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="yod-9f-w2g"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ToE-kO-W8m"/>
                     <connections>
                         <outlet property="loginBtn" destination="nmN-Nj-xRT" id="VSk-x1-IBQ"/>
                         <outlet property="signupBtn" destination="uAG-6r-rpI" id="aHC-F8-j2Y"/>
@@ -135,12 +142,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1143" y="-368"/>
+            <point key="canvasLocation" x="-497" y="-368"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="5j0-Pn-Kc8">
             <objects>
-                <viewController id="u1O-Iv-kr2" customClass="LoginViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginVC" id="u1O-Iv-kr2" customClass="LoginViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pzN-9c-fY1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1217,7 +1224,7 @@
         <!--Signup View Controller-->
         <scene sceneID="nhz-iX-u3I">
             <objects>
-                <viewController id="tcZ-6s-Nfb" customClass="SignupViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignUpVC" id="tcZ-6s-Nfb" customClass="SignupViewController" customModule="Unknown" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1cw-eM-yhz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1440,6 +1447,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zqW-IN-h1W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-497.10144927536237" y="278.57142857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7fk-ty-fAv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X3f-EE-TI8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gq8-zH-omR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="HDq-wH-83O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UM8-Fo-2C8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1143.4782608695652" y="-368.30357142857139"/>
         </scene>
     </scenes>
     <resources>
